# swagger.yaml
@@ -92,6 +92,43 @@ paths:
                     properties:
                       data:
                         type: object
+  /auth/update-password:
+    post:
+      tags:
+        - "Auth"
+      security:
+        - bearerAuth: []
+      requestBody:
+        required: true
+        content:
+          application/json:
+            schema:
+              type: object
+              properties:
+                user_id:
+                  type: integer
+                  example: 1
+                old_password:
+                  type: string
+                  example: password
+                new_password:
+                  type: string
+                  example: password
+              required:
+                - old_password
+                - new_password
+      responses:
+        200:
+          description: OK
+          content:
+            application/json:
+              schema:
+                allOf:
+                  - $ref: "#/components/schemas/BasicResponse"
+                  - type: object
+                    properties:
+                      data:
+                        type: object
   /users:
     get:
       tags:
